# selene

./: .gitignore  AGENTS.md  MEMORY.md  README.md  TODO.md
.claude/: settings.json
.github/workflows/: release.yml
backend/: startup.scd
bundle/: fetch-deps.sh  fetch-ghc.sh  fetch-hls.sh  fetch-sc3-plugins.sh  fetch-superdirt.sh
core/: BootTidal.hs
docs/: plan-hls.md
editor/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
editor/src/: main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  lsp.rs  main.rs  osc.rs  sidecar.rs
