[package]
name = "selene"
version = "0.1.0"
description = "Single-installer live-coding music environment"
license = "GPL-3.0"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "selene_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
rosc = "0.11.4"

[target.'cfg(unix)'.dependencies]
# Kill the whole process group on teardown so scsynth (spawned by sclang, a
# grandchild of our process) dies with Selene instead of orphaning.
libc = "0.2"
